--- a/iwatch WatchKit App/Info.plist
+++ b/iwatch WatchKit App/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.qagate.iwatch.watchkitapp</string>
+	<string>com.alen.iwatch.watchkitapp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
