--- a/iwatch WatchKit Extension/Info.plist
+++ b/iwatch WatchKit Extension/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.qagate.iwatch.watchkitextension</string>
+	<string>com.alen.iwatch.watchkitextension</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
